feature[TW26592]: Add Markdown rendering in View Table Report
Change-Id: I8f3462bd119e8e14994bdd7ac10fbf4c1b28147c