@@ -5,7 +5,7 @@
  * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
  * https://www.eclipse.org/legal/epl-2.0/
- * 
+ *
  * SPDX-License-Identifier: EPL-2.0
  *
  * Contributors:
@@ -18,7 +18,6 @@ import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Map;
 import java.util.Set;
-
 import org.eclipse.nebula.widgets.xviewer.core.util.CollectionsUtil;
 import org.eclipse.nebula.widgets.xviewer.core.util.XViewerUtil;
 import org.eclipse.nebula.widgets.xviewer.core.util.XmlUtil;
@@ -285,7 +284,7 @@ public class XViewerColumn {
             continue;
          }
          try {
-            sum += new Double(value);
+            sum += Double.valueOf(value);
          } catch (Exception ex) {
             exceptions.add(ex.getLocalizedMessage());
          }
@@ -401,6 +400,13 @@ public class XViewerColumn {
 
    public void resetElapsedTime() {
       this.elapsedTime = 0L;
+   }
+
+   /**
+    * Override to provide custom html for Tree Viewer Report
+    */
+   public String getTreeViewHtml(String str) {
+      return null;
    }
 
 }
